fix buttons not centered

--- a/frontend/src/scss/components/_gameover.scss
+++ b/frontend/src/scss/components/_gameover.scss
@@ -17,6 +17,8 @@
 
   &__next {
     padding: 1rem 0;
+    display: flex;
+    justify-content: center;
 
     button {
       margin: 0 0.5rem;
